--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -3513,6 +3513,10 @@
       <DependentUpon>BRAFMutationAnalysisResultPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Test\BRAFMutationAnalysisResultPath.cs" />
+    <Compile Include="UI\Test\HER2AmplificationRecountResultPage.xaml.cs">
+      <DependentUpon>HER2AmplificationRecountResultPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Test\HER2AmplificationRecountResultPath.cs" />
     <Compile Include="UI\Test\HER2AmplificationSummaryResultPage.xaml.cs">
       <DependentUpon>HER2AmplificationSummaryResultPage.xaml</DependentUpon>
     </Compile>
@@ -5406,6 +5410,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\Test\BRAFMutationAnalysisResultPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Test\HER2AmplificationRecountResultPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
