--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -43,7 +43,7 @@
     <MapFileExtensions>false</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>287</ApplicationRevision>
+    <ApplicationRevision>293</ApplicationRevision>
     <ApplicationVersion>10.1.12.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -299,6 +299,7 @@
     <Compile Include="Business\BaseData.cs" />
     <Compile Include="Business\BaseItem.cs" />
     <Compile Include="Business\BaseListItem.cs" />
+    <Compile Include="Business\Billing.Model\ADTListItem.cs" />
     <Compile Include="Business\Billing.Model\BillableObjectNeoFlowCytometry.cs" />
     <Compile Include="Business\Billing.Model\CptCodeFactory.cs" />
     <Compile Include="Business\Billing.Model\CPTCodeWithModifier.cs" />
@@ -308,6 +309,7 @@
     <Compile Include="Business\Billing.Model\MonitoredObject.cs" />
     <Compile Include="Business\Billing.Model\MonitoredObjectCollection.cs" />
     <Compile Include="Business\Billing.Model\PropertyChanges.cs" />
+    <Compile Include="Business\Billing.Model\SVHNoCDMMailMessage.cs" />
     <Compile Include="Business\Client.Model\HPV1618CompoundStandingOrderRule1.cs" />
     <Compile Include="Business\Client.Model\HPV1618ReflexOrderPAPNormalHPVPositive.cs" />
     <Compile Include="Business\Client.Model\HPVCompoundStandingOrderRule7.cs" />
@@ -2955,6 +2957,7 @@
     <Compile Include="UI\AutoCompleteTest.xaml.cs">
       <DependentUpon>AutoCompleteTest.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Business\Billing.Model\AccessionListItem.cs" />
     <Compile Include="UI\Billing\BillingPage.xaml.cs">
       <DependentUpon>BillingPage.xaml</DependentUpon>
     </Compile>
@@ -3414,6 +3417,9 @@
       <DependentUpon>SurgicalHistory.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Surgical\TextSearchHandler.cs" />
+    <Compile Include="UI\Billing\SVHADTMatcher.xaml.cs">
+      <DependentUpon>SVHADTMatcher.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\SystemUserDialog.xaml.cs">
       <DependentUpon>SystemUserDialog.xaml</DependentUpon>
     </Compile>
@@ -5323,6 +5329,10 @@
     <Page Include="UI\Surgical\SurgicalReview.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="UI\Billing\SVHADTMatcher.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\SystemUserDialog.xaml">
       <SubType>Designer</SubType>
