--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -330,6 +330,7 @@
     <Compile Include="Business\Gateway\PreviousResultGateway.cs" />
     <Compile Include="Business\Gateway\WebServiceGateway.cs" />
     <Compile Include="Business\Gateway\XmlGateway.cs" />
+    <Compile Include="Business\Helper\ProbeCommentResolver.cs" />
     <Compile Include="Business\HL7View\ADTMessage.cs" />
     <Compile Include="Business\HL7View\ADTMessages.cs" />
     <Compile Include="Business\Billing.Model\BillableObject.cs" />
@@ -1054,7 +1055,6 @@
     <Compile Include="Business\Test\HPV1618\HPV1618WPHOBXView.cs" />
     <Compile Include="Business\Test\HPVRNAISH\HPVRNAISHTest.cs" />
     <Compile Include="Business\Test\INI1\INI1Test.cs" />
-    <Compile Include="Business\Test\MDSByFish\ProbeCommentResolver.cs" />
     <Compile Include="Business\Test\MissingInformation\MissingInformationWordDocument.cs" />
     <Compile Include="Business\Test\MPNExtendedReflexPanel\MPNExtendedReflexPanelTest.cs" />
     <Compile Include="Business\Test\BCellEnumeration\BCellEnumerationCMMCNTEView.cs" />
