--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1071,11 +1071,12 @@
     <Compile Include="Business\Test\HPV1618\HPV1618WPHOBXView.cs" />
     <Compile Include="Business\Test\HPVRNAISH\HPVRNAISHTest.cs" />
     <Compile Include="Business\Test\INI1\INI1Test.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1LossBRAFD.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1Loss.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1Loss1.cs" />
     <Compile Include="Business\Test\MissingInformation\MissingInformationWordDocument.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEColonMSH6Loss.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEColonPMS2Loss.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1Loss.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1Loss2.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEIHCResult.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEIHCResultIntactExpression.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEIHCResultLossOfExpression.cs" />
