Add remaining colon rules, remove old results, rename Gyn and GEN rules

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1076,6 +1076,11 @@
     <Compile Include="Business\Test\INI1\INI1Test.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1Loss.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1Loss1.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1PMS2Loss.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1PMS2Loss1.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1PMS2Loss2.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1PMS2Loss3.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1PMS2Loss4.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSERuleResults.cs" />
     <Compile Include="Business\Test\MissingInformation\MissingInformationWordDocument.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEColonMSH6Loss.cs" />
@@ -1120,9 +1125,9 @@
     <Compile Include="Business\Test\JAK2V617F\JAK2V617FCMMCNteView.cs" />
     <Compile Include="Business\Test\LowGradeSmallBCellLymphomaFishPanel\LowGradeSmallBCellLymphomaFishPanelTest.cs" />
     <Compile Include="Business\Test\LymphocyteSubsetPanel4\LymphocyteSubsetPanel4Test.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEGeneralResult2.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEGeneralResult1.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEGYNResult3a.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEGeneralAnyLoss.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEGeneralAllIntact.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEGYNPMS2Loss.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LynchSyndromeIHCPanelCMMCNTEView.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LynchSyndromeIHCPanelWPHOBXView.cs" />
     <Compile Include="Business\Test\MDSExtendedByFish\MDSExtendedByFishCMMCNTEView.cs" />
@@ -1270,7 +1275,6 @@
     <Compile Include="Business\Test\LiposarcomaFusionProfile\LiposarcomaFusionProfileWordDocument.cs" />
     <Compile Include="Business\Test\LymphocyteSubsetPanel5\LymphocyteSubsetPanel5Test.cs" />
     <Compile Include="Business\Test\LymphocyteSubsetPanel7\LymphocyteSubsetPanel7Test.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColorectalResult12B.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEColonMSH2Loss.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LynchSyndromeEvaluationWPHOBXView.cs" />
     <Compile Include="Business\Test\MDSByFish\MDSByFishWPHOBXView.cs" />
@@ -1291,8 +1295,6 @@
     <Compile Include="Business\Test\HPV\HPVWPHOBXView.cs" />
     <Compile Include="Business\Test\JAK2V617F\JAK2V617FWPHObxView.cs" />
     <Compile Include="Business\Test\LLP\LLPWPHOBXView.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColorectalResult32.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColorectalResult42.cs" />
     <Compile Include="Business\Test\MultipleMyelomaMGUSByFish\MultipleMyelomaMGUSByFishWPHOBXView.cs" />
     <Compile Include="Business\Test\MUM1ByIHC\MUM1ByIHCTest.cs" />
     <Compile Include="Business\Test\NeoTYPEColorectalTumorProfile\NeoTYPEColorectalTumorProfileTest.cs" />
@@ -2395,17 +2397,10 @@
     <Compile Include="Business\Test\LynchSyndrome\IHCResultLossOfNuclearExpressionPMS2.cs" />
     <Compile Include="Business\Test\LynchSyndrome\IHCResultNoLossOfNuclearExpression.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEColonAllIntact.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColorectalResult11.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColorectalResult12.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColorectalResult2.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColorectalResult3.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColorectalResult4.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEColonMSH2MSH6Loss.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColorectalResult6.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColorectalResult8.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEGYNResult1.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEGYNResult2.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEGYNResult3.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEGYNMLH1PMS2Loss.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEGYNAllIntact.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEGYNMSH2MSH6Loss.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSERule.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSERuleCollection.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEResultEnum.cs" />
