Refactor LSERules for colon to allIntact, BrafMeth and sendOut

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1074,18 +1074,10 @@
     <Compile Include="Business\Test\HPV1618\HPV1618WPHOBXView.cs" />
     <Compile Include="Business\Test\HPVRNAISH\HPVRNAISHTest.cs" />
     <Compile Include="Business\Test\INI1\INI1Test.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1Loss.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1Loss1.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1PMS2Loss.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1PMS2Loss1.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1PMS2Loss2.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1PMS2Loss3.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1PMS2Loss4.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEColonBRAFMeth.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEColonSendOut.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSERuleResults.cs" />
     <Compile Include="Business\Test\MissingInformation\MissingInformationWordDocument.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColonMSH6Loss.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColonPMS2Loss.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1Loss2.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEIHCResult.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEIHCResultIntactExpression.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEIHCResultLossOfExpression.cs" />
@@ -1125,9 +1117,7 @@
     <Compile Include="Business\Test\JAK2V617F\JAK2V617FCMMCNteView.cs" />
     <Compile Include="Business\Test\LowGradeSmallBCellLymphomaFishPanel\LowGradeSmallBCellLymphomaFishPanelTest.cs" />
     <Compile Include="Business\Test\LymphocyteSubsetPanel4\LymphocyteSubsetPanel4Test.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEGeneralAnyLoss.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEGeneralAllIntact.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEGYNPMS2Loss.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LynchSyndromeIHCPanelCMMCNTEView.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LynchSyndromeIHCPanelWPHOBXView.cs" />
     <Compile Include="Business\Test\MDSExtendedByFish\MDSExtendedByFishCMMCNTEView.cs" />
@@ -1275,7 +1265,6 @@
     <Compile Include="Business\Test\LiposarcomaFusionProfile\LiposarcomaFusionProfileWordDocument.cs" />
     <Compile Include="Business\Test\LymphocyteSubsetPanel5\LymphocyteSubsetPanel5Test.cs" />
     <Compile Include="Business\Test\LymphocyteSubsetPanel7\LymphocyteSubsetPanel7Test.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColonMSH2Loss.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LynchSyndromeEvaluationWPHOBXView.cs" />
     <Compile Include="Business\Test\MDSByFish\MDSByFishWPHOBXView.cs" />
     <Compile Include="Business\Test\METMutationAnalysis\METMutationAnalysisTest.cs" />
@@ -2397,10 +2386,7 @@
     <Compile Include="Business\Test\LynchSyndrome\IHCResultLossOfNuclearExpressionPMS2.cs" />
     <Compile Include="Business\Test\LynchSyndrome\IHCResultNoLossOfNuclearExpression.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEColonAllIntact.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEColonMSH2MSH6Loss.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEGYNMLH1PMS2Loss.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEGYNAllIntact.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEGYNMSH2MSH6Loss.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSERule.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSERuleCollection.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEResultEnum.cs" />
